--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "commander": "^5.1.0",
     "git-clone": "^0.1.0",
+    "open": "^7.0.3",
     "shelljs": "^0.8.4"
   }
 }
