--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "快速生成vue3项目的命令行工具",
   "main": "index.js",
   "bin": {
-    "vue3-cli": "./index.js"
+    "vue3-node-cli": "./index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
