--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "git-clone": "^0.1.0",
     "open": "^7.0.3",
     "shelljs": "^0.8.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zhourusheng/node-cli"
   }
 }
